# pyiceberg-firestore-gcs

./: COMPACTION.md  Makefile  README.md  pyproject.toml  test_encoding.py
opteryx_catalog/: __init__.py  firestore_catalog.py  opteryx_catalog.py
opteryx_catalog/catalog/: __init__.py  dataset.py  manifest.py  metadata.py  metastore.py  table.py  view.py
opteryx_catalog/iops/: gcs.py
opteryx_catalog/webhooks/: README.md
pyiceberg_firestore_gcs/: __init__.py  firestore_catalog.py  parquet_manifest.py  view.py
scripts/: backfill_current_snapshot_id.py  create_benchmark_tables.py  create_clickbench_views.py  create_opteryx_tables.py  explore_opteryx_data.py  explore_opteryx_detail.py  fix_tweets_table.py  rewrite_manifests.py  rewrite_opteryx_tables.py  validate_manifests.py
src/: __init__.py
tests/: create_table.py  create_table_api.py  f7116533e9dd.parquet  read_table.py  test_compatibility_flag.py  test_pruning_unit.py  test_view_metadata.py
